# Video_Player

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  genqt.sh
include/: mainwindow.h
source/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
